workloads/docker-registry/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: docker-registry
  namespace: kube-system
spec:
  parentRefs:
    - name: shared-gateway
      namespace: default
      sectionName: containerstore-john2143-https
  hostnames:
    - containerstore.john2143.com
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: registry-basic-auth
      backendRefs:
        - name: docker-registry
          port: 5000
